main/default/objects/formDynamic__c/formDynamic__c.object-meta.xml
<CustomObject>
    <label>formDynamic</label>
    <nameField>
        <label>formDynamic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>formDynamic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>