main/default/objects/formDynamic__c/fields/Glass_for_all__c.field-meta.xml
<CustomField>
    <fullName>Glass_for_all__c</fullName>
    <label>Glass for all</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>