main/default/objects/formDynamic__c/fields/Items_Needed__c.field-meta.xml
<CustomField>
    <fullName>Items_Needed__c</fullName>
    <label>Items Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>