main/default/objects/formDynamic__c/fields/Labor_for_1__c.field-meta.xml
<CustomField>
    <fullName>Labor_for_1__c</fullName>
    <label>Labor for 1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>