main/default/objects/formDynamic__c/fields/Labor_For_All__c.field-meta.xml
<CustomField>
    <fullName>Labor_For_All__c</fullName>
    <label>Labor For All</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>