main/default/objects/formDynamic__c/fields/Optional_Customer_Line__c.field-meta.xml
<CustomField>
    <fullName>Optional_Customer_Line__c</fullName>
    <label>Optional: Customer Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>