main/default/objects/formDynamic__c/fields/Parts_for_1__c.field-meta.xml
<CustomField>
    <fullName>Parts_for_1__c</fullName>
    <label>Parts for 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>