main/default/objects/formDynamic__c/fields/Shop_Price_for_1__c.field-meta.xml
<CustomField>
    <fullName>Shop_Price_for_1__c</fullName>
    <label>Shop Price for 1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>