main/default/objects/formDynamic__c/fields/Side__c.field-meta.xml
<CustomField>
    <fullName>Side__c</fullName>
    <label>Side</label>
    <length>255</length>
    <type>Text</type>
</CustomField>