main/default/objects/formDynamic__c/fields/Type_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Service__c</fullName>
    <label>Type of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>